Fix tab-specific actions (eg. Copy, Paste) not appearing in Configure Shortcuts dialog. Add action collection for current controller to dialog before showing and reload UI for other controllers after the dialog is accepted.

There is a known bug at the moment where changing a shortcut from a custom value to
the default shortcut only updates the current tab and tabs created after the change.
This is a kdelibs issue being looked into.

BUG: 161021
BACKPORT: 4.1

svn path=/trunk/KDE/kdebase/apps/konsole/; revision=837726